--- a/src/styles/layout/navbar.scss
+++ b/src/styles/layout/navbar.scss
@@ -6,7 +6,7 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  @include flexCenterContainer;
+  @include flexCenter;
 
   &:hover {
     cursor: pointer;
